# diagrams

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: release.yml
bench/: baseline.json  bench.html  dbml-rs-perf-report.md  gen.ts  run-fps.mjs  vite.bench.config.ts
src/: App.tsx  bpmn-js.d.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: diag.rs  file_ops.rs  mod.rs  parse.rs  sql_export.rs  sql_import.rs
src-tauri/src/export/: mod.rs
src-tauri/src/parser/: convert.rs  mod.rs  preprocess.rs
src-tauri/src/sql/: mod.rs  mssql.rs  mysql.rs  postgres.rs  sqlite.rs
src-tauri/src/sql_import/: mod.rs
src/components/: ConfirmDialog.tsx  DiagramView.tsx  ErrorBoundary.tsx  icons.tsx
src/components/Architecture/: ArchGlyphs.tsx  NodeIcons.tsx  (+1 more)
src/context/: ThemeContext.tsx
src/hooks/: useDbmlParser.ts  useDebouncedValue.test.tsx  useDebouncedValue.ts  useDiagramLayout.ts  useDocuments.ts  useFileOperations.ts  useNodePositions.ts  useViewTransform.ts  useWorkerLayout.ts
src/lib/: constants.ts  diagramTypes.ts  edgePath.ts  exportImage.ts  findTableAtOffset.ts  layoutEngine.test.ts  layoutEngine.ts  layoutStorage.ts  paths.ts  prefs.ts  session.ts  tauri.ts  textOffsets.ts  themes.ts  viewportCulling.test.ts  viewportCulling.ts
src/types/: layout.ts  schema.ts
src/workers/: layoutWorker.test.ts  layoutWorker.ts
(+46 files in other folders)
