[package]
name = "diagrams"
version = "0.1.0"
edition = "2024"

[lib]
name = "diagrams_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
dbml-rs = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
pest = "2.8"
sqlparser = "0.62.0"
